--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/6131ecdde6.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e93f492f12.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilos.css">
     <title>Hotelia</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            <img src="img/Hotelia horizontal blanco.svg">
+        </div>      
+        <div class="menu">
+            <a href="index.html" class="item">Inicio</a>
+            <a href="ubicanos.html" class="item">Ubícanos</a>
+            <a href="opiniones.html" class="item">Opiniones</a>
+            <a href="#" class="item"><button class="navbar-button"><i class="fa-solid fa-user"></i> Iniciar Sesión</button></a>
+        </div>
+    </nav>
+
 </body>
 </html>
