--- a/index.html
+++ b/index.html
@@ -21,5 +21,44 @@
         </div>
     </nav>
 
+    <section id="base">
+        <div class="base">
+            <h2 class="base">Estamos ubicados en el barrio La Cabrera al norte de Bogotá, en un contexto de<br>
+                lujo donde interactúan los negocios, el ocio y el descanso, gracias a su<br>
+                estratégica ubicación rodeada de bancos, restaurantes de alta cocina, centros<br>
+                comerciales, almacenes de lujo y emblemáticos parques para aprovechar la<br>
+                naturaleza entre la ciudad camina y hacer un poco de deporte al aire libre están <br>
+                el parque del Virrey y El Parque de la 93. Además de nuestro exclusivo diseño,  <br>
+                ponemos a tu disposición una oferta gastronómica tan sofisticada como<br>
+                saludable a base de productos locales, cargados de lo mejor de la tradición<br>
+                colombiana</h2>
+
+
+    </section>
+
+    <section id="features">
+        <h2 class="features-title">Razones por las que disfrutaras quedarte con nosotros</h2>
+        <div class="features-description">
+
+            <div class="feature feature-blue">
+                <i class="fa-solid fa-bell-concierge"></i>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="feature feature-black">
+                <i class="fa-solid fa-bed"></i>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="feature feature-blue">
+                <i class="fa-solid fa-wifi"></i>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="feature feature-black">
+                <i class="fa-solid fa-dumbbell"></i>
+                <p>Lorem ipsum dolor</p>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 </html>
