--- a/index-css-grid.html
+++ b/index-css-grid.html
@@ -27,30 +27,108 @@
                </button>
             </a>
         </div>
-    </nav>
-
+    </nav>    
+    
     <div id="container-grid">
 
         <section id="banner">
-            Aquí el banner
+           <div class="texto1">  
+             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+             Ad consectetur 
+           </div> 
         </section>
         <section id="descripcion">
-            Aquí la descripción
+                Estamos ubicados en el barrio La Cabrera al norte de Bogotá, en un contexto de lujo donde interactúan 
+                los negocios, el ocio y el descanso, gracias a su estratégica ubicación rodeada de bancos, restaurantes 
+                de alta cocina, centros comerciales, almacenes de lujo y emblemáticos parques para aprovechar la naturaleza
+                entre la ciudad caminay y hacer un poco de deporte al aire libre están el parque del Virrey y El Parque de la 93.
+                Además de nuestro exclusivo diseño, ponemos a tu disposición una oferta gastronómica tan sofisticada como saludable
+                a base de productos locales, cargados de lo mejor de la tradición colombiana.
         </section>
         <section id="features">
-            Aquí el feature
-        </section>
+            <h2 class="features-title">Razones por las que disfrutaras quedarte con nosotros</h2>
+            <div class="features-description">
+                 <div class="feature feature-blue">
+                    <i class="fa-solid fa-bell-concierge"></i>
+                    <p>Lorem ipsum dolor</p>
+                 </div>
+                <div class="feature feature-black">
+                   <i class="fa-solid fa-bed"></i>
+                   <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="feature feature-blue">
+                   <i class="fa-solid fa-wifi"></i>
+                   <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="feature feature-black">
+                  <i class="fa-solid fa-dumbbell"></i>
+                  <p>Lorem ipsum dolor</p>
+               </div>
+            </div>
+        </section>   
         <section id="ubicacion">
-            Aquí la ubicación
-        </section>
-        <section id="opinion">
-            Aquí la opinión
-        </section>
-        <footer>
-            Aqui el footer
-        </footer>
-    </div>
+                <p><b>Ubícanos</b></p>   
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3324.3717074147107!2d-70.62996!3d-33.569697!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sco!4v1659830622135!5m2!1ses!2sco"  
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div class="texto2">
+             AVENIDA CARRERA 8, #12A-42, BOGOTA DC,<br>COLOMBIA
+            <hr color="#337AB7">
+              <p>+57 601 4567899</p>
+          </div> 
 
+
+        </section>
+    <section id="opinion">
+            <h2 class="opinion-title">Nuestros usuarios dicen</h2>
+        <div class="opiniones">
+            <div class="opinion opinion-uno">
+                <div class="foto1"></div> 
+                <div class="arriba"> 
+                         <p>Diego Rodriguez</p><br>
+                    </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 quos eum quibusdam modi dignissimos cupiditate at! Doloribus!</p>
+             </div>
+      <!--      
+            <div class="opinion opinion-dos">
+                <div class="arriba">
+                    <div class="foto2"></div>  
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 quos eum quibusdam modi dignissimos cupiditate at! Doloribus!</p>
+            </div>
+            <div class="opinion opinion-tres">
+                <div class="foto3"></div> Diego Rodriguez
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 quos eum quibusdam modi dignissimos cupiditate at! Doloribus!</p>
+            </div>--> 
+        </div>   
+          <div class="bottom"> 
+            <i class="fa-solid fa-dash"></i>
+            <i class="fa-solid fa-dash"></i>
+            <i class="fa-solid fa-dash"></i>
+          </div>
+    </section>
+
+
+
+
+   
+        <footer>
+          
+        </footer>
+
+    </div>
 
 </body>
 </html>
