--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="index.html" class="item">Inicio</a>
             <a href="ubicanos.html" class="item">Ubícanos</a>
             <a href="opiniones.html" class="item">Opiniones</a>
-            <hr class="menu-hr" noshade="">
+            <hr color="#337AB7" class="menu-hr" noshade="">
             <a href="#" class="item"><button class="navbar-button"><i class="fa-solid fa-user"></i> Iniciar Sesión</button></a>
         </div>
     </nav>
