Lo ultimo pero honrado

--- a/index-css-grid.html
+++ b/index-css-grid.html
@@ -79,39 +79,11 @@
 
         </section>
     <section id="opinion">
-            <h2 class="opinion-title">Nuestros usuarios dicen</h2>
+            <h2 class="opinion-title">Nuestros usuarios dicen...</h2>
         <div class="opiniones">
             <div class="opinion opinion-uno">
-                <div class="foto1"></div> 
-                <div class="arriba"> 
-                         <p>Diego Rodriguez</p><br>
-                    </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 quos eum quibusdam modi dignissimos cupiditate at! Doloribus!</p>
+                     <img src="img/opinion/uwu.jpg">
              </div>
-      <!--      
-            <div class="opinion opinion-dos">
-                <div class="arriba">
-                    <div class="foto2"></div>  
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-stroke"></i>
-                    </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 quos eum quibusdam modi dignissimos cupiditate at! Doloribus!</p>
-            </div>
-            <div class="opinion opinion-tres">
-                <div class="foto3"></div> Diego Rodriguez
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 quos eum quibusdam modi dignissimos cupiditate at! Doloribus!</p>
-            </div>--> 
         </div>   
           <div class="bottom"> 
             <i class="fa-solid fa-dash"></i>
@@ -121,14 +93,30 @@
     </section>
 
 
-
-
-   
+<section id="footer">
+    <div>
         <footer>
-          
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            In, libero. Perspiciatis, tenetur laboriosam minus nostrum quidem
+            beatae sint? Modi temporibus nostrum cupiditate sunt nisi laboriosam
+            perferendis deserunt, pariatur consectetur sint.</p>
+          <hr>
+          <i class="fa-solid fa-location-dot"></i>
+           Avenida carrera 8, #12A-42, Bogota DC,<br>
+           colombia<br><br>
+         <i class="fa-solid fa-phone"></i>
+         +57 601 4567899
+         <hr>
+         <div class="botones">
+          <a href="#">Politicas de privacidad</a> 
+          <a href="#">Politicas de privacidad</a> 
+        </div>
+         <hr> 
+         <i class="fa-brands fa-instagram"></i>
+         <i class="fa-brands fa-facebook-f"></i>
+         <i class="fa-brands fa-twitter"></i>
         </footer>
-
     </div>
-
+</section>
 </body>
 </html>
