Gran avance uwu

--- a/index-css-grid.html
+++ b/index-css-grid.html
@@ -33,8 +33,7 @@
 
         <section id="banner">
            <div class="texto1">  
-             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-             Ad consectetur 
+          <b> Lorem ipsum dolor sit ameteliter,<br> consectetur adipisicing elit.</b>
            </div> 
         </section>
         <section id="descripcion">
