Suficiente por hoy

--- a/index-css-grid.html
+++ b/index-css-grid.html
@@ -76,14 +76,13 @@
             <hr color="#337AB7">
               <p>+57 601 4567899</p>
           </div> 
-
           
         </section>
     <section id="opinion">
             <h2 class="opinion-title">Nuestros usuarios dicen...</h2>
         <div class="opiniones">
             <div class="opinion opinion-uno">
-                     <img src="img/opinion/uwu.jpg|x">
+                     <img src="img/opinion/uwu.jpg">
              </div>
         </div>   
           <div class="bottom"> 
@@ -93,7 +92,7 @@
           </div>
     </section>
 
-
+    <!--
 <section id="footer">
     <div>
         <footer>
@@ -118,6 +117,6 @@
          <i class="fa-brands fa-twitter"></i>
         </footer>
     </div>
-</section>
+</section>-->
 </body>
 </html>
