--- a/ej-css-grid.html
+++ b/ej-css-grid.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/e93f492f12.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/ej-css-grid.css">
-    <title>Hotelia layout grid</title>
+    <link rel="icon" type="image/x-icon" href="img/hotelia campana.svg">
+    <title>Ejercicio de maquetación CSS GRID</title>
 </head>
-
-<div id="container-grid">
+<body>
+    
+    <div id="container-grid">
         <header>HEADER</header>
         <nav>NAVBAR</nav>
         <main>MAIN</main>
         <aside>SIDEBAR</aside>
         <footer>FOOTER</footer>
+
     </div>
+</body>
+</html>
