--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/6131ecdde6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index-estilos.css">
     <link rel="icon" type="image/x-icon" href="img/hotelia campana.svg">
-    <title>hotelia Css con Grid</title>
+    <title>Hotelia</title>
 </head>
 <body>
     <div id="container-grid">
@@ -101,6 +101,30 @@
             Nuestro usuarios dicen...
         </div>
         <section id="opinion">
+
+            <div class="cards carta3">
+                <div class="card-content">
+                    <img src="img/opinion/Vector-opinion.png" alt="" class="deg">
+                    <div class="image">
+                        <img src="img/opinion/user3.png" alt="" class="fotop">
+                    </div>
+                    <div class="name-profession">
+                        <span class="name">Andres Hernandez</span>
+                    </div>
+                    <div class="rating">
+                        <i class="fas fa-star star5"></i>
+                        <i class="fas fa-star star4"></i>
+                        <i class="fas fa-star star3"></i>
+                        <i class="fas fa-star star2"></i>
+                        <i class="fas fa-star star1"></i>
+                    </div>
+                    <div class="bottom">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus consequatur
+                        doloribus totam quo quibusdam saepe assumenda ad voluptates dolor aliquam.
+                    </div>
+                </div>
+            </div>
+            
             <div class="cards carta1">
                 <div class="card-content">
                     <img src="img/opinion/Vector-opinion.png" alt="" class="deg">
