--- a/registro.html
+++ b/registro.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/registro-estilos.css">
         <link rel="icon" type="image/x-icon" href="img/hotelia campana.svg">
         <script src="https://kit.fontawesome.com/6131ecdde6.js" crossorigin="anonymous"></script>
-    <title>Registro</title>
+    <title>Registro de Huésped</title>
 </head>
 <body class="body">
 
@@ -189,9 +189,9 @@
                 </div>
             </div>
         </div>
-
-        <div class="footer">
-            <label><input type="checkbox" value="" name="terminos">Acepto terminos y condiciones</label>
+                
+                <div class="footer">
+                    <label><input type="checkbox" value="" name="terminos">Acepto terminos y condiciones</label>
             <button class="button">Ingresar</button>
         </div>
 
